# robot_arm

./: README.md  example_2_motors.py  tags  test.py  test2.py  test3.py
CAD/: AX-12A.SLDASM  ball_bearing_gear.SLDPRT  base.SLDPRT  base.STL  casing.SLDPRT  casing.STL  first_arm.SLDPRT  first_arm.STL  first_arm2.STL  first_arm_medium.STL  gear.SLDPRT  gear.STL  joint_connector.SLDPRT  joint_connector.STL  robot_arm_assembly.SLDASM  second_servo_holder.SLDPRT  second_servo_holder_v2.SLDPRT  second_servo_holder_v2.STL  servo_bushing.SLDPRT  servo_bushing.STL  servo_washer.SLDPRT  servo_washer.STL  top_plate.SLDPRT  top_plate.STL  top_plate_connector.SLDPRT  top_plate_connector.STL
cpp/: CMakeLists.txt  NOTES.md  README.md
cpp/config/: config.yml
cpp/src/: CMakeLists.txt  limit_calc.cpp  main.cpp  ping.cpp  sim.cpp
cpp/src/math_lib/: CMakeLists.txt  bezier.cpp  bezier.hpp  mat.cpp  mat.hpp  quat.cpp  quat.hpp  vec.cpp  vec.hpp  vector.cpp  vector.hpp
cpp/src/math_lib/tests/: CMakeLists.txt  bezier-tests.cpp  mat-tests.cpp  quat-tests.cpp  testbench.hpp  vec-tests.cpp
cpp/src/robot_lib/: CMakeLists.txt  ax-12a.cpp  ax-12a.hpp  debug.cpp  debug.hpp  motor.cpp  motor.hpp  robot_lib.cpp  robot_lib.hpp
cpp/src/robot_lib/FABRIK/: CMakeLists.txt  fabrik.cpp  fabrik.hpp
cpp/src/robot_lib/FABRIK/tests/: CMakeLists.txt  fabrik-tests.cpp
cpp/src/tests/: CMakeLists.txt  testbench.hpp
msrc/: addresses.m  main.asv  main.m  mainInvKin.m  qmapping.m  robotBody.m  setupLib.m  setup_lib.m  smoothMove.m  smoothTraj.m  test.m
msrc/3Dmodels/LowPoly/: LP_first_arm.blend  LP_first_arm.blend1  LP_first_arm.stl  LP_first_connector.blend  LP_first_connector.stl  LP_first_joint.blend  LP_first_joint.stl  LP_second_arm.blend  LP_second_connector.blend  LP_second_connector.stl
msrc/Experimental/: test.m
msrc/lib/: LED.m  addresses.mat  goToHome.m  goalPos.m  goal_pos.m  led.m  moveJoint.m  movingSpeed.m  openPort.m  open_port.m  rPos.m  rSpeed.m  setupMotors.m  setupPort.m  setup_motors.m  torqueEnable.m  torqueLimit.m  torque_enable.m  torque_limit.m
src/: Ax12.py  Robot.py  SetID.py
src/tests/: example.py  factory_reset.py  test2.py
