
add_executable(vec-tests vec-tests.cpp)
target_link_libraries(vec-tests ARC::math)

add_executable(mat-tests mat-tests.cpp)
target_link_libraries(mat-tests ARC::math)

add_executable(quat-tests quat-tests.cpp)
target_link_libraries(quat-tests ARC::math)

add_executable(bezier-tests bezier-tests.cpp)
target_link_libraries(bezier-tests ARC::math)

add_test(Vec3Construct vec-tests 0)
add_test(Clamp vec-tests 1)
add_test(Vec3Axis vec-tests 2)
add_test(Vec3Str vec-tests 3)
add_test(Vec3Add vec-tests 4)
add_test(Vec3Sub vec-tests 5)
add_test(Vec3Mul vec-tests 6)
add_test(Vec3Div vec-tests 7)
add_test(Vec3Dot vec-tests 8)
add_test(Vec3Cross vec-tests 9)
add_test(Vec3Proj vec-tests 10)
add_test(Vec3Norm vec-tests 11)
add_test(Vec3Normalize vec-tests 12)
add_test(Vec3Angle vec-tests 13)
add_test(Vec3Rotate vec-tests 14)

add_test(Mat3Construct mat-tests 0)
add_test(Mat3Str mat-tests 1)
add_test(Mat3Add mat-tests 2)
add_test(Mat3Sub mat-tests 3)
add_test(Mat3MulScalar mat-tests 4)
add_test(Mat3DivScalar mat-tests 5)
add_test(Mat3MulMat mat-tests 6)
add_test(Mat3Transpose mat-tests 7)
add_test(Mat3Inverse mat-tests 8)
add_test(Mat3Determinant mat-tests 9)
add_test(Mat3ToQuatIdentity mat-tests 10)
add_test(Mat3ToQuat2 mat-tests 11)

add_test(QuatConstruct quat-tests 0)
add_test(QuatStr quat-tests 1)
add_test(QuatAdd quat-tests 2)
add_test(QuatSub quat-tests 3)
add_test(QuatMul quat-tests 4)
add_test(QuatScalarMul quat-tests 5)
add_test(QuatNorm quat-tests 6)
add_test(QuatNormalize quat-tests 7)
add_test(QuatUnitnorm quat-tests 8)
add_test(QuatInverse quat-tests 9)
add_test(QuatSlerp quat-tests 10)
add_test(QuatNlerp quat-tests 11)
add_test(QuatToMatIdentity quat-tests 12)
add_test(QuatToMat2 quat-tests 13)

add_test(BezierConstruct bezier-tests 0)
add_test(BezierSampleLine bezier-tests 1)
add_test(BezierSampleCurve bezier-tests 2)
